SalesforceGarage/src/objects/QBO_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>QBO_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QBO_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QBO_Invoice_Due_Date__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QBO_Invoice_Id__c</fullName>
        <label>QBO Invoice Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBO_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issued</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QBO_SyncToken__c</fullName>
        <label>SyncToken</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBO_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term</label>
        <referenceTo>QBO_Term__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>QBO_Customer__c</columns>
        <columns>QBO_Invoice_Date__c</columns>
        <columns>QBO_Invoice_Due_Date__c</columns>
        <columns>QBO_Term__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>